# lab4-polynomial

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  Polynomial.cpp  Polynomial.h
samples/: main.cpp
test/: CMakeLists.txt  Polynomial_Test.cpp
